--- a/templates/bovinos/index.html.twig
+++ b/templates/bovinos/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Bovinos index{% endblock %}
+{% block title %}Bovinos Menu{% endblock %}
 
 {% block body %}
-    <h1>Bovinos index</h1>
+    <h1>Menu</h1>
 
     <table class="table">
         <thead>
