--- a/templates/bovinos/new.html.twig
+++ b/templates/bovinos/new.html.twig
@@ -3,9 +3,10 @@
 {% block title %}New Bovinos{% endblock %}
 
 {% block body %}
-    <h1>Create new Bovinos</h1>
+    <h1>Cadastre novos gados !</h1>
 
     {{ include('bovinos/_form.html.twig') }}
 
-    <a href="{{ path('app_bovinos_index') }}">back to list</a>
+
+
 {% endblock %}
