--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,10 +7,21 @@
         <!-- Boostrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
         <!-- -->
+
+        <!-- CSS -->
+         <link rel="stylesheet" href="./assets/css/styles.css">
+        <!-- -->
+
+        <!-- JS -->
+         <script src="/assets/js/datepicker.js"></script>
+        <!-- -->
+
         {% block stylesheets %}
-        {% endblock %}
+          {{ encore_entry_link_tags('app') }}
+            {% endblock %}
 
         {% block javascripts %}
+           {{ encore_entry_script_tags('app') }}
         {% endblock %}
     </head>
     <body>
