--- a/templates/bovinos/_delete_form.html.twig
+++ b/templates/bovinos/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('app_bovinos_delete', {'id': bovino.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ bovino.id) }}">
-    <button class="btn">Delete</button>
+   <button type="button" class="btn btn-danger">Deletar !</button>
 </form>
