--- a/templates/bovinos/index.html.twig
+++ b/templates/bovinos/index.html.twig
@@ -29,8 +29,8 @@
                 <td>{{ bovino.dataNascimento ? bovino.dataNascimento|date('Y-m-d') : '' }}</td>
                 <td>{{ bovino.dataAbatimento ? bovino.dataAbatimento|date('Y-m-d') : '' }}</td>
                 <td>
-                   <button> <a href="{{ path('app_bovinos_show', {'id': bovino.id}) }}">Liste-o</a> </button>
-                    <button> <a href="{{ path('app_bovinos_edit', {'id': bovino.id}) }}">Editar</a> </button>
+                   <button type="button" class="btn btn-info"><a href="{{ path('app_bovinos_show', {'id': bovino.id}) }}">Liste-o</a> </button>
+                    <button type="button" class="btn btn-info"><a href="{{ path('app_bovinos_edit', {'id': bovino.id}) }}">Editar</a> </button>
                 </td>
             </tr>
         {% else %}
@@ -41,5 +41,5 @@
         </tbody>
     </table>
 
-    <button><a href="{{ path('app_bovinos_new') }}">Cadastre seu gado !</a></button>
+    <button type="button" class="btn btn-success"><a href="{{ path('app_bovinos_new') }}">Cadastre seu gado !</a></button>
 {% endblock %}
