--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,29 +4,68 @@
         <meta charset="UTF-8">
         <title>{% block title %}Fazenda de Gados{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>🟢</text></svg>">
+
         <!-- Boostrap -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
         <!-- -->
 
         <!-- CSS -->
-         <link rel="stylesheet" href="./assets/css/styles.css">
+
+         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
         <!-- -->
 
         <!-- JS -->
-         <script src="/assets/js/datepicker.js"></script>
+
+         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+        <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
         <!-- -->
 
         {% block stylesheets %}
-          {{ encore_entry_link_tags('app') }}
-            {% endblock %}
-
-        {% block javascripts %}
-           {{ encore_entry_script_tags('app') }}
+          {{encore_entry_link_tags('app')}}
         {% endblock %}
+
+             {% block javascripts %}
+            {{ encore_entry_script_tags('app') }}
+        {% endblock %}
+
     </head>
+
     <body>
-        <div class='container'>
+    <header>
+     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand p-3" href="{{path('app_bovinos_index')}}"><span class="h3">StoreApp</span></a>
+                <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarCollapse">
+                    <div class="navbar-nav">
+                        <a class="nav-link" href="{{path('app_bovinos_index')}}">Tela Inicial</a>
+                        <a class="nav-link" href="{{path('app_bovinos_new')}}">Cadastre o Gado</a>
+                        <a class="nav-link" href="{{path('app_bovinos_abate')}}">Abater</a>
+                        <a class="nav-link" href="{{path('app_bovinos_index')}}">Relatório de abatimento</a>
+                    </div>
+                 </div>
+            </div>
+        </nav>
+    </header>
+        <main class="container mb-5">
         {% block body %}{% endblock %}
-        </div>
-    </body>
+    </main>
+
+        <footer class="fixed-bottom">
+            <nav class="navbar navbar-expand-lg footer" data-bs-theme="dark">
+                <div class="container">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <div class="fst-italic text-muted">&copy;Pedro Henrique - copyright ©</div>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </footer>
+        </body>
 </html>
+
