--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,10 @@
+body {
+  background-image: url("") center 10rem no-repeat fixed;
+}
+
+.container {
+  opacity: 0.97;
+}
 .title-page {
   margin-bottom: 0;
 }
