--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,6 +13,7 @@
 
          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+
         <!-- -->
 
         <!-- JS -->
@@ -45,7 +46,7 @@
                         <a class="nav-link" href="{{path('app_bovinos_index')}}">Tela Inicial</a>
                         <a class="nav-link" href="{{path('app_bovinos_new')}}">Cadastre o Gado</a>
                         <a class="nav-link" href="{{path('app_bovinos_abate')}}">Abater</a>
-                        <a class="nav-link" href="{{path('app_bovinos_index')}}">Relatório de abatimento</a>
+                        <a class="nav-link" href="{{path('app_bovinos_abatidos')}}">Relatório de abatimento</a>
                     </div>
                  </div>
             </div>
@@ -60,7 +61,7 @@
                 <div class="container">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <div class="fst-italic text-muted">&copy;Pedro Henrique - copyright ©</div>
+                            <div class="fst-italic text-muted">&copy;Pedro Henrique - copyright 2023 - 2024 ©</div>
                         </li>
                     </ul>
                 </div>
