--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Fazenda de Gados{% endblock %}</title>
+        <title>{% block title %}Fazenda de Bovinos{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>🟢</text></svg>">
 
         <!-- Boostrap -->
@@ -22,6 +22,8 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
         <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
         <!-- -->
+
+        {#Run ' composer require symfony/webpack-encore-bundle ' to start using Symfony UX #}
 
         {% block stylesheets %}
           {{encore_entry_link_tags('app')}}
