--- a/templates/bovinos/abate.html.twig
+++ b/templates/bovinos/abate.html.twig
@@ -1,1 +1,65 @@
 {% extends 'base.html.twig' %}
+  {% block title %} Abatedouro {% endblock %}
+  {% block body %}
+
+    <table class="table">
+       <thead>
+           <tr>
+               <th scope="col">ID</th>
+               <th scope="col">Código</th>
+               <th scope="col">Leite Produzido</th>
+               <th scope="col">Ração</th>
+               <th scope="col">Peso</th>
+               <th scope="col">Ações</th>
+           </tr>
+       </thead>
+       <tbody>
+        {% for bovinos in bovinos %}
+        <tr>
+                <td>{{bovinos.id}}</td>
+                <td>{{bovinos.codigo}}</td>
+                <td>{{bovinos.leite|number_format(2, ',', '.')}} Litros</td>
+                <td>{{bovinos.racao|number_format(2, ',', '.')}} Kg</td>
+                <td>{{bovinos.peso|number_format(2, ',', '.')}} Kg ( Arrobas )</td>
+                <td>
+                    <button id="btn-abater" data-id="{{ bovinos.id }}" type="button" class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                Abater
+                    </button>
+                </td>
+            </tr>
+      {% endfor %}
+        </tbody>
+    </table>
+     {% if bovinos is empty %}
+      <div class="alert alert-primary" role="alert">Ainda não existem bovinos para o abater!</div>
+      {% endif %}
+    {{ knp_pagination_render(bovinos) }}
+  </div>
+     <!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Confirmar abatimento</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Tem certeza que deseja mandar o bovino pro abate?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                <a id="abater" class="btn btn-danger">Abater</a>
+            </div>
+        </div>
+    </div>
+</div>
+  {% endblock %}
+  {% block javascripts %}
+        <script>
+            $(document).on('click', '#btn-abater', function (e) {
+                a = document.getElementById('abater');
+                const id =  $(this).data('id');
+                a.setAttribute("href", "/bovino/abatidos/" + id);
+            });
+       </script>
+{% endblock %}
