changes mades justify

--- a/templates/bovinos/index.html.twig
+++ b/templates/bovinos/index.html.twig
@@ -10,12 +10,12 @@
             <tr>
                 <th>Id</th>
                 <th>Codigo</th>
-                <th>Leite</th>
-                <th>Racao</th>
-                <th>Peso</th>
-                <th>Data_nascimento</th>
-                <th>Data_abatimento</th>
-                <th>actions</th>
+                <th>Leite Litros</th>
+                <th>Racao KG</th>
+                <th>Peso Arrobas</th>
+                <th>Nascimento</th>
+                <th>Abatimento</th>
+                <th>Ações</th>
             </tr>
         </thead>
         <tbody>
