changes and ajusts

--- a/templates/bovinos/abate.html.twig
+++ b/templates/bovinos/abate.html.twig
@@ -42,7 +42,7 @@
             $(document).on('click', '#btn-abater', function (e) {
                 const a = document.getElementById('abater');
                 const id =  $(this).data('id');
-                a.setAttribute("href", "/bovinos/abatidos/" + id);
+                a.setAttribute("href", "/abater/" + id);
             });
             });
        </script>
